# vkt

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
ext/stb/: CMakeLists.txt
ext/stb/include/: stb_image.h
include/vkext/: align.h  model.h  stb_image.h
include/vkt/: buffer.h  command_buffer.h  command_pool.h  debug.h  descriptor_pool.h  descriptor_set_layout.h  device.h  device_memory.h  fence.h  framebuffer.h  glfw.h  graphics_pipeline.h  image.h  image_view.h  instance.h  loader.h  phys_dev.h  pipeline.h  pipeline_layout.h  queue.h  render_pass.h  sampler.h  semaphore.h  shader_module.h  surface.h  swapchain.h  utils.h  vkt.h
include/vkx/: auto_desc_pool.h  missing_tex.h  model.h  obj_model.h  phong.h  stb_image.h  texture.h  vk_model.h
shaders/: phong.frag  phong.vert  simple.frag  simple.vert  triangle.frag  triangle.vert
src/: main.cc  stuff.cc
src/vkext/: model.cc  stb_image.cc
src/vkt/: buffer.cc  command_buffer.cc  command_pool.cc  debug.cc  descriptor_pool.cc  descriptor_set_layout.cc  device.cc  device_memory.cc  fence.cc  framebuffer.cc  glfw.cc  graphics_pipeline.cc  image.cc  image_view.cc  instance.cc  loader.cc  phys_dev.cc  pipeline.cc  pipeline_layout.cc  queue.cc  render_pass.cc  sampler.cc  semaphore.cc  shader_module.cc  surface.cc  swapchain.cc  utils.cc
src/vkx/: auto_desc_pool.cc  missing_tex.cc  model.cc  obj_model.cc  phong.cc  stb_image.cc  vk_model.cc
